--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>pl.patrykjava</groupId>
     <artifactId>forecast</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>forecast</name>
     <description>forecast</description>
     <url/>
